--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@microsoft/sp-property-pane": "1.18.2",
     "@microsoft/sp-webpart-base": "1.18.2",
     "@pnp/pnpjs": "^2.15.0",
+    "@pnp/spfx-controls-react": "3.16.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tslib": "2.3.1"
